--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lite_rolling_switch: ^0.1.1
+  modal_bottom_sheet: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,9 +47,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/pseudoLogo.jpeg
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,11 +63,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: DosisRegular
+      fonts:
+        - asset: fonts/Dosis-Regular.ttf
+    - family: AbrilFatFaceRegular
+      fonts:
+        - asset: fonts/AbrilFatface-Regular.ttf
+    - family: IBMPlexSerif
+      fonts:
+        - asset: fonts/IBMPlexSerif-Regular.ttf
+
+
+
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
