--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ flutter:
     - family: IBMPlexSerif
       fonts:
         - asset: fonts/IBMPlexSerif-Regular.ttf
+    - family: lobster
+      fonts:
+        - asset: fonts/Lobster-Regular.ttf
 
 
 
