--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/pseudoLogo.jpeg
+   - assets/images/greg.jpg
+   - assets/images/james.jpg
+   - assets/images/john.jpg
+   - assets/images/olivia.jpg
+   - assets/images/sam.jpg
+   - assets/images/sophia.jpg
+   - assets/images/steven.jpg
 
 
 
