--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   firebase_auth: ^3.2.0
   firebase_database: ^8.1.0  
   firebase_core: any
-  
+  google_maps_flutter: ^2.1.1
+  http: ^0.13.4
+  geolocator: ^8.0.1
 
   
 
