--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   lite_rolling_switch: ^0.1.1
   modal_bottom_sheet: ^2.0.0
+  date_time_picker: "^2.1.0"
   flutter_datetime_picker:
 
 
