--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ environment:
   sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
+  get_storage:
   flutter:
     sdk: flutter
   lite_rolling_switch: ^0.1.1
@@ -48,7 +49,9 @@ dependencies:
   geolocator: ^8.0.1
   location: ^4.3.0
   
+  
   geocoder: ^0.2.1
+  shared_preferences: ^2.0.12
 
   
 
