--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^4.3.2+2
   firebase_auth: ^3.2.0
   firebase_database: ^8.1.0  
+  cloud_firestore: ^3.1.10
   firebase_core: any
   google_maps_flutter: ^2.1.1
   http: ^0.13.4
